# nnue-pytorch

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.NVIDIA  README.md  a.out  compile_data_loader.bat  config.py  cross_check_eval.py  delete_bad_nets.py  do_plots.py  example.yaml  feature_set.py  feature_transformer.py  features.py  ftperm.py  halfka.py  halfka_v2.py  halfka_v2_hm.py  halfkp.py  install_gh200.sh  model.py  nn-ba8dd4c94c4e.nnue  nnue_dataset.py  perf.data  perf.data.old  perf_sigmoid_fitter.py  pyproject.toml  ranger.py  requirements.txt  run_docker.sh  run_games.py  serialize.py  setup_script.sh  train.py  training_data_loader.cpp  visualize.py  visualize_multi_hist.py
data_loader/: dataset.py  stream.py
examples/: example.yaml
lib/: nnue_training_data_formats.h  nnue_training_data_stream.h
model/: __init__.py  lightning_module.py  model.py  schedulefreemodel.py
model/features/: feature_block.py  feature_set.py  full_threats.py
model/utils/: load_model.py  serialize.py
scripts/: easy_train.py  train_pipeline.py  yaml_easy_train.py
src/: features.py  main.cpp  nnue_dataset.py  train.py
src/nnue_pytorch/: _core.pyi  feature_transformer.py  nnue_dataset.py  ranger.py  serialize.py  train.py  visualize.py  visualize_multi_hist.py
