[project]
name = "nnue-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asciimatics>=1.15.0",
    "cupy-cuda12x>=12.3.0",
    "gputil>=1.4.0",
    "matplotlib>=3.7.5",
    "numba>=0.58.1",
    "psutil>=7.0.0",
    "python-chess==0.31.4",
    "pytorch-lightning==1.9.5",
    "requests>=2.32.3",
    "tensorboard>=2.14.0",
    "torch==2.4.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
